# JoguinhosSDL

./: .gitignore  README.md
.github/workflows/: gh-pages.yml
Cobrinha/: CMakeLists.txt  Makefile  cobrinha.h  init_sdl.c  init_sdl.h  logic.c  main.c  obj.c  obj.h
Cobrinha/include/: cobrinha.h  init_sdl.h  obj.h
Cobrinha/src/: main.c
FlappyBirdRemix/: CMakeLists.txt  Makefile  README.md  draw.c  draw.h  flappy.h  init_sdl.c  init_sdl.h  logic.c  logic.h  main.c
FlappyBirdRemix/include/: draw.h  flappy.h  init_sdl.h  logic.h
FlappyBirdRemix/src/: main.c
Quebra_Bloco/: CMakeLists.txt  Makefile  README.md  main.c  objects.c  objects.h  quebra_bloco.h
Quebra_Bloco/include/: init_sdl.h  objects.h  quebra_bloco.h
Quebra_Bloco/src/: main.c
Tetramino/: Makefile  main.c  tetramino.h
